components/ua/ua-dev-tools/overlays/dev/patch-image.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ua-dev-tools
spec:
  template:
    spec:
      containers:
        - name: ua-dev-tools
          image: ghcr.io/isisbusapps/ua-dev-tools@sha256:1fbf7ff38dd1ad06b8bb157a61d0497fd16d59ab374a7d664299550cd46a0fde
