components/ua/ua-dev-tools/overlays/dev/patch-image.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ua-dev-tools
spec:
  template:
    spec:
      containers:
        - name: ua-dev-tools
          image: ghcr.io/isisbusapps/ua-dev-tools@sha256:6cf6da807f5aac5ac1ae291e54987c3eeafc5c1b434f471239feb11e3ddcdfe8
