components/ua/ua-dev-tools/overlays/dev/HTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ua-dev-tools
spec:
  parentRefs:
  - name: envoy-gateway
    kind: Gateway
    namespace: envoy-gateway-system
    sectionName: https-facilities
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /ua-dev-tools
    backendRefs:
    - name: ua-dev-tools
      port: 8100
